--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/test
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://35.226.24.64/test?useSSL=false
+
 spring.datasource.username = root
 spring.datasource.password = test
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
